// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab/> should render default props 1`] = `
<div>
  <button
    class="StyledTab-sc-7ood0w-0 kZERpL"
    color="#F1F1F1"
  >
    <div
      class="tab-text"
      style="display: flex; align-items: center;"
    >
      <p
        class="StyledParagraph-sc-dbd4lw-0 tkjyw"
        color="darkGray"
      >
        Tab
      </p>
    </div>
  </button>
</div>
`;

exports[`<Tab/> should render with left line 1`] = `
<div>
  <button
    class="StyledTab-sc-7ood0w-0 jCshkj"
    color="#F1F1F1"
  >
    <div
      class="tab-text"
      style="display: flex; align-items: center;"
    >
      <p
        class="StyledParagraph-sc-dbd4lw-0 tkjyw"
        color="darkGray"
      >
        left
      </p>
    </div>
  </button>
</div>
`;

exports[`<Tab/> should render with right line 1`] = `
<div>
  <button
    class="StyledTab-sc-7ood0w-0 bpSeFz"
    color="#F1F1F1"
  >
    <div
      class="tab-text"
      style="display: flex; align-items: center;"
    >
      <p
        class="StyledParagraph-sc-dbd4lw-0 tkjyw"
        color="darkGray"
      >
        right
      </p>
    </div>
  </button>
</div>
`;

exports[`<Tab/> should render with top line 1`] = `
<div>
  <button
    class="StyledTab-sc-7ood0w-0 gwVuQD"
    color="#F1F1F1"
  >
    <div
      class="tab-text"
      style="display: flex; align-items: center;"
    >
      <p
        class="StyledParagraph-sc-dbd4lw-0 tkjyw"
        color="darkGray"
      >
        top
      </p>
    </div>
  </button>
</div>
`;
